--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,12 @@ leptos_router = { version = "0.6", features = ["nightly"] }
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
 tower = { version = "0.4", optional = true }
 tower-http = { version = "0.5", features = ["fs"], optional = true }
-wasm-bindgen = "=0.2.89"
+wasm-bindgen = "0.2.92"
 thiserror = "1"
 tracing = { version = "0.1", optional = true }
 http = "1"
 serde = { version = "1.0.196", features = ["derive"] }
+toml = { version = "0.8.10", optional = true }
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
@@ -30,6 +31,7 @@ ssr = [
     "dep:tower",
     "dep:tower-http",
     "dep:leptos_axum",
+    "dep:toml",
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
