--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ tracing = { version = "0.1", optional = true }
 http = "1"
 serde = { version = "1.0.196", features = ["derive"] }
 toml = { version = "0.8.10", optional = true }
+leptos_icons = "0.3.0"
+icondata = "0.3.0"
 
 [features]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
